# engine

./: CMakeLists.txt  Engine.kdev4  main.cpp
include/core/: Allocator.h  Array.h  Assume.h  Containers.h
src/core/: Allocator.cpp  Assume.cpp  CMakeLists.txt
tests/: CMakeLists.txt  catch.hpp  test_array.cpp  test_core.cpp
